--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
-.loading_element, .map_element {
+.loading_element,
+.map_element {
     height: 100%;
 }
 
@@ -7,31 +8,18 @@
 }
 
 .gm-style .gm-style-iw-c {
-    display: flex;
-    align-items: center;
-    border-radius: 80px;
-    border-top-right-radius: 0;
-    height: 80px;
-    padding: 10px 20px;
-    position: fixed;
-    bottom: 0;
-    overflow: visible;
-}
-
-.gm-ui-hover-effect {
-    background: #fff;
-    opacity: 1;
-}
-
-.gm-style .gm-style-iw-t::after {
-    display: none;
+    border-radius: 60px 0 60px 60px;
 }
 
 .info_wrapper {
     display: flex;
-    align-items: center;
-    width: 500px;
-    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 10px 20px;
+}
+
+.info_wrapper div {
+    padding: 5px 0px;
 }
 
 .driver_name {
@@ -49,25 +37,52 @@
 }
 
 .info_window_icon {
-    width: 50px;
+    display: none;
+    width: 35px;
 }
 
 .toggle_destination {
-    border-radius: 100%;
-    width: 64px;
-    height: 64px;
-    background: #104d46;
-    color: #fff;
+    margin: 15px auto 0;
+    background: transparent;
     border: none;
     cursor: pointer;
-    font-size: 14px;
+    font-weight: bold;
+    color: #000;
+    font-size: 16px;
 }
 
-.toggle_destination:hover {
-    background: #176b61;
-}
+@media screen and (min-width: 640px) {
+    .info_wrapper {
+        flex-direction: row;
+        align-items: center;
+        width: 400px;
+        justify-content: space-between;
+    }
 
-.toggle_destination:active {
-    text-shadow: -1px -1px 0px #777, -1px -1px 0px #777;
-    box-shadow: inset 1px 1px 4px #222;
+    .info_window_icon {
+        display: block;
+    }
+
+    .toggle_destination {
+        border-radius: 100%;
+        width: 64px;
+        height: 64px;
+        background: #000;
+        color: #fff;
+        font-size: 14px;
+        margin: 0;
+    }
+
+    .toggle_destination:hover {
+        background: #104d46;
+    }
+
+    .toggle_destination:active {
+        text-shadow: -1px -1px 0px #777, -1px -1px 0px #777;
+        box-shadow: inset 1px 1px 4px #222;
+    }
+
+    .gm-style .gm-style-iw-c {
+        border-radius: 80px 0 80px 80px;
+    }
 }
